Adds endpoint to get all coins that can be added to a portfolio.
